# Linear-Algebra-Math-Library-Test

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  camera.cpp  camera.hpp  game.cpp  game.hpp  main.cpp  object.cpp  object.hpp
shaders/: main_frag.glsl  main_vert.glsl  post_frag.glsl  post_vert.glsl
utilities/: matrix.cpp  matrix.hpp  quat.hpp  transform.cpp  transform.hpp  vector.hpp
